Bug 77713 - FILEOPEN: File Corruption - Header.xml
Summary: FILEOPEN: File Corruption - Header.xml
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Rajashri
URL:
Whiteboard: BSA target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-21 08:05 UTC by Rajashri
Modified: 2014-04-30 17:24 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Original file. (24.47 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-04-21 08:05 UTC, Rajashri
Details
- The header contains a Table with 1 row and two columns. - First column contains one ovelapped date picker content control - Second column contains one text content control, image and one hyperlink. (1.43 MB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-04-21 08:07 UTC, Rajashri
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rajashri 2014-04-21 08:05:51 UTC
Created attachment 97666 [details]
Original file.

Problem description: 
After doing the initial phase of analysis, we can say that the corruption might get introduced due to changes in header.xml

Steps to reproduce:
1. Open file in LibreOffice
2. Click File -> Save As (Microsoft word 2007/2010(.docx))
3. It saves as .docx
4. Open the same file again which got roundtripped.

Current behaviour:
The file should open properly after roundtrip.
Expected behaviour:
It gives a message "The file cannot be opened because there are problems with the contents".              
Operating System: All
Version: 4.3.0.0.alpha0+ Master
Comment 1 Rajashri 2014-04-21 08:07:43 UTC
Created attachment 97668 [details]
- The header contains a Table with 1 row and two columns.
- First column contains one ovelapped date picker content control
- Second column contains one text content control, image and one hyperlink.
Comment 2 Commit Notification 2014-04-28 07:48:24 UTC
Rajashri committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d9de57dd2acc4719f846e908284ed81f09856098

fdo#77713 : File Corruption - Header.xml



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Jorendc 2014-04-30 17:24:17 UTC
No corruption anymore, tested using Windows 8.1 and LibreOffice Version: 4.3.0.0.alpha1+
Build ID: 0b03f7ed575838f90e6b1ebec3538a3a214f81fb
TinderBox: Win-x86@39, Branch:master, Time: 2014-04-30_01:30:46

thanks!

Kind regards,
Joren