fdo#77713 : File Corruption - Header.xml

Document containing track changes within a SDT content
is getting corrupted.
Reason for corruption: In export side,parent tag [SDT] is
getting closed before child tag ['del' tag].
The corruption is resolved now.

Change-Id: I42451495f80e30ddfebab8b81bcf1e309b0c2ca2